--- a/index.html
+++ b/index.html
@@ -500,10 +500,10 @@
     margin: 0 auto;
   ">
     <h1 itemprop="name" style="font-size: 2.5rem; color: #002244; margin-bottom: 20px;">
-      The Best <strong style="color: #00a0e1;">CRM Software</strong> for Growing Businesses
+      The Best <strong style="color: #00a0e1;">Streaming App for Movies</strong>in 2025
     </h1>
     <p itemprop="description" style="font-size: 1.1rem; color: #555; margin-bottom: 40px; max-width: 700px; margin: 0 auto 40px;">
-      Our <strong style="color: #00a0e1;">CRM software</strong> helps businesses streamline customer relationships, boost sales, and improve marketing ROI.
+      Explore <strong style="color: #00a0e1;">Movie Streaming App</strong> for high-quality films, top-notch features, and zero ads. Your movie nights just got better.
     </p>
 
     <!-- Ilustrasi Logo Inline -->
@@ -518,7 +518,7 @@
     <!-- Fitur Ringkasan -->
     <div style="text-align: left; max-width: 700px; margin: 0 auto 40px;">
       <h2 style="color: #002244; font-size: 1.8rem; margin-bottom: 20px; text-align: center;">
-        What Our <strong style="color: #00a0e1;">CRM Software</strong> Can Do For You
+        Top Features of the Best <strong style="color: #00a0e1;">Streaming App in 2025</strong> Can Do For You
       </h2>
       <ul style="list-style: none; padding: 0; margin: 0 auto;">
         <li style="margin-bottom: 15px; display: flex; align-items: flex-start;" class="fade-in fade-in-delay-1">
