--- a/index.html
+++ b/index.html
@@ -523,15 +523,30 @@
       <ul style="list-style: none; padding: 0; margin: 0 auto;">
         <li style="margin-bottom: 15px; display: flex; align-items: flex-start;" class="fade-in fade-in-delay-1">
           <i class="fas fa-check-circle" style="color: #00a0e1; font-size: 1.2rem; margin-top: 3px; margin-right: 10px;"></i>
-          <span><strong>CRM software</strong> centralizes all customer data in one place</span>
+          <span><strong>HD & 4K Streaming</strong> Watch movies in stunning high-definition and 4K quality with no buffering.</span>
         </li>
         <li style="margin-bottom: 15px; display: flex; align-items: flex-start;" class="fade-in fade-in-delay-2">
           <i class="fas fa-robot" style="color: #00a0e1; font-size: 1.2rem; margin-top: 3px; margin-right: 10px;"></i>
-          <span><strong>CRM software</strong> automates sales pipelines and follow-ups</span>
+          <span><strong>Offline Viewing</strong> Download your favorite movies and watch them anywhere, anytime.</span>
         </li>
-        <li style="margin-bottom: 15px; display: flex; align-items: flex-start;" class="fade-in fade-in-delay-3">
+        <li style="margin-bottom: 15px; display: flex; align-items: flex-start;" class="fade-in fade-in-     
+delay-3">
+          <i class="fas fa-robot" style="color: #00a0e1; font-size: 1.2rem; margin-top: 3px; margin-right: 10px;"></i>
+          <span><strongFamily Profiles</strong> Create personalized profiles for everyone in the household.</span>
+        </li>
+        <li style="margin-bottom: 15px; display: flex; align-items: flex-start;" class="fade-in fade-in-
+delay-4">
+          <i class="fas fa-robot" style="color: #00a0e1; font-size: 1.2rem; margin-top: 3px; margin-right: 10px;"></i>
+          <span><strong>Ad-Free Experience</strong> Enjoy uninterrupted movie watching with zero ads—guaranteed.</span>
+        </li>
+        <li style="margin-bottom: 15px; display: flex; align-items: flex-start;" class="fade-in fade-in-     delay-5">
+          <i class="fas fa-robot" style="color: #00a0e1; font-size: 1.2rem; margin-top: 3px; margin-right: 10px;"></i>
+          <span><strong>Multi-language Support</strong> Stream movies with subtitles or dubs in your preferred language.</span>
+        </li>
+        <li style="margin-bottom: 15px; display: flex; align-items: flex-start;" class="fade-in fade-in-   
+delay-6">
           <i class="fas fa-chart-line" style="color: #00a0e1; font-size: 1.2rem; margin-top: 3px; margin-right: 10px;"></i>
-          <span><strong>CRM software</strong> provides actionable insights to grow your business</span>
+          <span><strong>Smart TV Compatibility</strong> Stream directly to your smart TV, tablet, or mobile with seamless integration.</span>
         </li>
       </ul>
     </div>
